src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_ContentStyle.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">

        <Button Content="Hello">
                <Button.ContentTemplate>
                        <DataTemplate>
                            <TextBlock Name="foo" Text="{Binding }" />

                            <DataTemplate.Triggers>
                                <Trigger Property="IsPressed" Value="True">
                                    <Setter Property="Height" Value="50" />
                                </Trigger>
                            </DataTemplate.Triggers>

                        </DataTemplate>
                </Button.ContentTemplate>
        </Button>

    <Button />
</DockPanel>

</Page>
